--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
 			<version>1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.parboiled</groupId>
+			<artifactId>parboiled-java</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+
 		<!-- Jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
