--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,11 @@
 			<artifactId>chartjs</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>datatables</artifactId>
+			<version>1.10.7</version>
+		</dependency>
 
 		<!-- Spring -->
 		<dependency>
