--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.apache.jclouds</groupId>
+			<artifactId>jclouds-all</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
@@ -168,7 +174,22 @@
 			<version>${jackson.version}</version>
 		</dependency>
 
-		<!-- CSV -->
+		<!-- Data format -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>xsoup</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.tika</groupId> -->
+		<!-- <artifactId>tika-parsers</artifactId> -->
+		<!-- <version>1.8</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
 			<artifactId>super-csv</artifactId>
@@ -183,6 +204,11 @@
 			<groupId>net.sf.supercsv</groupId>
 			<artifactId>super-csv-joda</artifactId>
 			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -245,22 +271,7 @@
 			<version>1.14.8</version>
 		</dependency>
 
-		<!-- Data format -->
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>us.codecraft</groupId>
-			<artifactId>xsoup</artifactId>
-			<version>0.3.0</version>
-		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.tika</groupId> -->
-		<!-- <artifactId>tika-parsers</artifactId> -->
-		<!-- <version>1.8</version> -->
-		<!-- </dependency> -->
+
 
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
@@ -305,7 +316,6 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.23</version>
 		</dependency>
 
 		<dependency>
