--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 		<developerConnection>scm:git:git@github.com:Treydone/mandrel.git</developerConnection>
 		<url>http://github.com/Treydone/mandrel</url>
 	</scm>
+	
+	<issueManagement>
+		<system>github</system>
+		<url>http://github.com/Treydone/mandrel/issues</url>
+	</issueManagement>
 
 	<properties>
 		<!-- General Properties -->
@@ -47,7 +52,12 @@
 	</properties>
 
 	<dependencies>
-	
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>redis.clients</groupId> -->
+<!-- 			<artifactId>jedis</artifactId> -->
+<!-- 			<version>2.5.2</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
@@ -96,9 +106,9 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-pool</groupId>
-			<artifactId>commons-pool</artifactId>
-			<version>1.6</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.esotericsoftware</groupId>
