--- a/pom.xml
+++ b/pom.xml
@@ -589,6 +589,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
+			<version>2.1.5</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
