--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,9 @@
 		<java.version>1.8</java.version>
 
 		<!-- Dependencies -->
-		<spring-boot.version>1.2.7.RELEASE</spring-boot.version>
-		<spring-cloud.version>Angel.SR3</spring-cloud.version>
+		<spring-boot.version>1.3.0 RC1</spring-boot.version>
+		<spring-cloud.version>Brixton.M1</spring-cloud.version>
+		<spring-data.version>Gosling-RELEASE</spring-data.version>
 
 		<jackson.version>2.6.0</jackson.version>
 		<netty.version>4.1.0.Beta5</netty.version>
@@ -59,16 +60,16 @@
 		<!-- <artifactId>jedis</artifactId> -->
 		<!-- <version>2.5.2</version> -->
 		<!-- </dependency> -->
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>2.0.0-beta2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jclouds</groupId>
-			<artifactId>jclouds-all</artifactId>
-			<version>1.9.1</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.elasticsearch</groupId> -->
+		<!-- <artifactId>elasticsearch</artifactId> -->
+		<!-- <version>2.0.0-beta2</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.jclouds</groupId> -->
+		<!-- <artifactId>jclouds-all</artifactId> -->
+		<!-- <version>1.9.1</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -108,11 +109,6 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.esotericsoftware</groupId>
-			<artifactId>kryo</artifactId>
-			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial.snappy</groupId>
@@ -271,18 +267,6 @@
 			<version>${netty.version}</version>
 		</dependency>
 
-		<!-- HZ -->
-		<dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast</artifactId>
-			<version>3.4.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast-spring</artifactId>
-			<version>3.4.2</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -405,6 +389,22 @@
 			<version>1.10.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mongodb</groupId>
+					<artifactId>mongo-java-driver</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -471,10 +471,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.data</groupId> -->
 		<!-- <artifactId>spring-yarn-boot</artifactId> -->
@@ -612,6 +608,13 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-releasetrain</artifactId>
+				<version>${spring-data.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
