--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.mandrel</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.9-SNAPSHOT</version>
+		<version>0.0.9</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>standalone</artifactId>
