--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.mandrel</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.10</version>
+		<version>0.0.11-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>worker</artifactId>
